<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:theme="@style/CustomActionBarTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_doneform"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <me.myatminsoe.mdetect.MMEditText
                        android:id="@+id/txt_doneplace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:hint="@string/charity_done_place"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textCursorDrawable="@null"
                        android:background="@android:color/transparent"
                        android:textColor="@color/title"
                        android:textSize="@dimen/text_size_primary_big" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/relative_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.github.siyamed.shapeimageview.RoundedImageView
                    android:id="@+id/img_doneimage"
                    android:layout_width="match_parent"
                    android:layout_height="185dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/blue_btn"
                    app:siRadius="6dp"
                    />
                <LinearLayout
                    android:id="@+id/linear_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_file_upload_blue_24dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_centerInParent="true"
                        android:textStyle="bold"
                        android:textColor="@color/blue"
                        android:text="UPLOAD PHOTO"/>
                </LinearLayout>

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="20dp"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <me.myatminsoe.mdetect.MMEditText
                        android:id="@+id/txt_donedescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:hint="@string/charity_done_description"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textCursorDrawable="@null"
                        android:textColorHint="@color/title"
                        android:textColor="@color/title"
                        android:background="@android:color/transparent"
                        android:textSize="@dimen/text_size_title" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="4dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginRight="4dp">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_place_black_24dp"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <me.myatminsoe.mdetect.MMEditText
                        android:id="@+id/lab_donelocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/charity_post_place"
                        android:textColorHint="@color/title"
                        android:textColor="@color/title"
                        android:textCursorDrawable="@null"
                        android:padding="4dp"
                        android:background="@android:color/transparent"
                        android:textSize="@dimen/text_size_secondarytitle" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="4dp"
                android:gravity="left"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                tools:text="@string/charity_done_date"
                android:layout_marginRight="4dp">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_access_time_black_24dp"/>

                <me.myatminsoe.mdetect.MMTextView
                    android:id="@+id/lab_doneDatepick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/title"
                    android:padding="4dp"
                    tools:text="@string/charity_post_date"
                    android:textSize="@dimen/text_size_secondarytitle" />


                <ImageView
                    android:id="@+id/img_donedatepick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_keyboard_arrow_down_cyan_24dp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>