<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:theme="@style/CustomActionBarTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_donordonate"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="28dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_btn"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <me.myatminsoe.mdetect.MMTextView
                        android:id="@+id/btn_itemcategory"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.49"
                        android:gravity="center"
                        android:hint="@string/donor_post_category"
                        android:inputType="text"
                        android:padding="12dp"
                        android:textColorHint="@color/blue"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/text_size_title" />

                    <ImageView
                        android:id="@+id/img_arrowdown"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_keyboard_arrow_down_black_24dp" />
                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <me.myatminsoe.mdetect.MMEditText
                        android:id="@+id/lab_itemamount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:hint="@string/donor_post_amount"
                        android:inputType="text"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:textColor="@color/title"
                        android:textColorHint="@color/title"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/text_size_title" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relative_upload"
                android:layout_width="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_height="wrap_content">
            <com.github.siyamed.shapeimageview.RoundedImageView
                android:id="@+id/img_itemimage"
                android:layout_width="match_parent"
                android:layout_height="185dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@drawable/blue_btn"
                app:siRadius="6dp"
                app:srcCompat="@drawable/img" />
                <LinearLayout
                    android:id="@+id/linear_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_file_upload_blue_24dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_centerInParent="true"
                        android:textStyle="bold"
                        android:textColor="@color/blue"
                        android:text="UPLOAD PHOTO"/>
                </LinearLayout>

            </RelativeLayout>




            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <ImageView
                    android:id="@+id/ic_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_info_black_24dp" />

                <TextView
                    android:id="@+id/lab_donateinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ic_info"
                    android:gravity="center"
                    android:hint="@string/donor_donateinfo"
                    android:lineSpacingExtra="4dp"
                    android:padding="2dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_secondarydescription" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
